GC Dental/src/objects/Primary_Order_Goals_for_manager__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Primary_Order_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Revenue1__c</fullName>
        <label>Target Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Revenue__c</fullName>
        <label>Target Revenue RollUp</label>
        <summarizedField>Primary_Order_Goals_Line_Items__c.Target_Revenue__c</summarizedField>
        <summaryForeignKey>Primary_Order_Goals_Line_Items__c.Primary_Order_Goals_for_manager__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revnue__c</fullName>
        <label>Total Revenue Generated</label>
        <summarizedField>Primary_Order_Goals_Line_Items__c.Revenue_Generated__c</summarizedField>
        <summaryForeignKey>Primary_Order_Goals_Line_Items__c.Primary_Order_Goals_for_manager__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Primary Order Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Manager__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Target_Revenue1__c</columns>
        <columns>Total_Revnue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Sales_Manager__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Target_Revenue1__c</columns>
        <columns>Total_Revnue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <nameField>
        <displayFormat>PG-{00000}</displayFormat>
        <label>Primary Order Goals Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Primary Order Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>